<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.createTimeTableActivity">

    <RelativeLayout
        android:id="@+id/rvtimetabledatagetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/etnumberofsubjects"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            android:hint="@string/number_of_subjects"
            android:autofillHints="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/etlectureduration"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/single_lecture_duration"
            android:autofillHints="55"
            android:inputType="number" />

        <EditText
            android:id="@+id/etworkingdays"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="300dp"
            android:layout_marginStart="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/working_days"
            android:autofillHints="5"
            android:inputType="number" />


        <EditText
            android:id="@+id/etbreakduration"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="400dp"
            android:layout_marginStart="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/break_duration"
            android:autofillHints="30"
            android:inputType="number" />

        <TimePicker
            android:id="@+id/etstartingtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/day_starting_time_hh_mm"
            android:autofillHints="8:15"
            android:timePickerMode="spinner"/>
        <TimePicker
            android:id="@+id/etdayendingtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="730dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_alignParentTop="true"
            android:layout_marginTop="960dp"
            android:id="@+id/tvsavebutton"
            android:text="@string/save"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#BBBBBB"
            android:clickable="true"

            />


    </RelativeLayout>



</ScrollView>